--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <div id="container">
+      <p id="title">Testing Practice</p>
+      <p id="instructions">Please open the console</p>
+    </div>
+  </header>
 
   <div class="content1"></div>
   <div class="content2"></div>
   <div class="content3"></div>
 
   <footer>
-    <p>Copyright &copy; Odinsondev 2024</p>
+    <p>Copyright &copy; Odinsondev 2025</p>
   </footer>
 
   <script src="./javascript.js"></script>
